--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Lato&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
+
+
