--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,12 @@
     text-align: center;    
     background-color: burlywood;   
   }
+
+  header {
+    background-color: rgb(0, 0, 0, 0.5);
+    text-align: center; 
+    margin-bottom: 2rem; 
+  }
   
 /* Images Styles */
 .game-image {
