--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inknut+Antiqua&display=swap');
 
 * {
     margin: 0;
@@ -18,16 +18,31 @@
 
   /* Game-Area Settings*/
 #game-area {  
-    width: 60%;
+    width: 90%;
     text-align: center;    
     background-color: burlywood;   
   }
 
+  /* Heading Settings */
   header {
     background-color: rgb(0, 0, 0, 0.5);
     text-align: center; 
     margin-bottom: 2rem; 
   }
+
+  h1 {  
+    font-family: 'Inknut Antiqua', serif;
+    color: #FBDF07;
+    padding: 1rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: .3rem;
+  }
+   h2 {
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
+    font-size: 2em;
+   }
   
 /* Images Styles */
 .game-image {
@@ -39,3 +54,5 @@
   img {
     width: 80%
   }
+
+
