--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,72 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inknut+Antiqua&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 
-  body  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;  
-    font-family: Arial, Helvetica, sans-serif;  
-    background: #FBDF07 url("https://img.freepik.com/free-vector/wild-desert-landscape-daytime-scene_1308-50629.jpg?w=2000") no-repeat;
-    background-size: cover;
-  } 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #FBDF07 url("https://img.freepik.com/free-vector/wild-desert-landscape-daytime-scene_1308-50629.jpg?w=2000") no-repeat;
+  background-size: cover;
+}
 
-  /* Game-Area Settings*/
-#game-area {  
-    width: 90%;
-    text-align: center;    
-    background-color: burlywood;          
-  }
+/* Game-Area Settings*/
+#game-area {
+  width: 90%;
+  text-align: center;
+  background-color: burlywood;
+}
 
-  /* Heading Settings */
-  header {
-    background-color: rgb(0, 0, 0, 0.5);
-    text-align: center; 
-    margin-bottom: 2rem; 
-  }
+/* Heading Settings */
+header {
+  background-color: rgb(0, 0, 0, 0.5);
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
-  h1 {  
-    font-family: 'Inknut Antiqua', serif;
-    color: #FBDF07;
-    padding: 1rem;
-    text-transform: uppercase;
-    font-size: 1rem;
-    letter-spacing: .3rem;
-  }
-   h2 {
-    font-family: 'Indie Flower', cursive;
-    font-weight: bold;
-    font-size: 2em;
-   }
-  
+h1 {
+  font-family: 'Inknut Antiqua', serif;
+  color: #FBDF07;
+  padding: 1rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .3rem;
+}
+
+h2 {
+  font-family: 'Indie Flower', cursive;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+h4 {
+  color: blue;
+}
+
 /* Images Styles */
 .game-image {
-    text-align: center;
-    display: inline-block;
-    margin-bottom: 1rem;   
-  }
-  
-  img {
-    width: 80%
-  }
+  text-align: center;
+  display: inline-block;
+  margin-bottom: 1rem;
+}
 
-  /* Button Styles */
-  .btn {
-    font-family: 'Inknut Antiqua', serif;
-    background-color: chocolate;
-    padding: 0.25rem 0.4rem;
-    margin: 0.3rem;
-    color: #fff;
-    border: 1px solid black;
-    border-radius: 15px;
-    font-size: 0.75rem;
-    cursor: pointer;
-  }
+img {
+  width: 80%
+}
+
+/* Button Styles */
+.btn {
+  font-family: 'Inknut Antiqua', serif;
+  background-color: chocolate;
+  padding: 0.25rem 0.4rem;
+  margin: 0.3rem;
+  color: #fff;
+  border: 1px solid black;
+  border-radius: 15px;
+  font-size: 0.75rem;
+  cursor: pointer;
+}
 
 /* The Modal*/
 .modal {
@@ -77,7 +82,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   overflow-y: auto;
 }
 
@@ -90,7 +95,7 @@
   width: 40%;
   color: brown;
   text-align: center;
-  max-height: 100vh; 
+  max-height: 100vh;
 }
 
 /* The Close Modal Button */
@@ -101,38 +106,27 @@
   font-weight: bold;
 }
 
-.modal-btn:hover,
-.close:hover {
-  color: #E6B325;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-btn {   
-    border:2px solid green;
-    cursor: pointer;
-    padding: 8px 16px;
-    border-radius: 15px;
-    background-color: #fff; 
-    margin:  5px 25%;       
-}
-
-
-.modal-btn:hover,
+.about-button:hover,
 .close:hover {
   color: brown;
   text-decoration: none;
   cursor: pointer;
 }
 
-.modal-btn {
-    /* width: 5rem; */
-    border:2px solid black;
-    cursor: pointer;
-    padding: 8px 16px;
-    border-radius: 15px;
-    background-color: #fff; 
-    margin:  5px 25%;       
+.about-button {
+  border: 2px solid black;
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 15px;
+  margin: 0 25% 8px 25%;
+  padding: 8px 16px;
+  letter-spacing: 0.5rem;
+  font-weight: bold;
+}
+
+.rules {
+  color: #fff;
+  font-family: 'Indie Flower', cursive;
 }
 
 /* footer styles */
@@ -147,7 +141,7 @@ footer {
 }
 
 /* Media Queries */
- 
+
 @media screen and (min-width: 768px) {
 
   h1 {
@@ -164,9 +158,9 @@ footer {
 
   #game-area {
     width: 60%;
-  } 
+  }
 
-    p {
+  p {
     margin-bottom: 0.8rem;
     font-size: 1.5rem;
   }
@@ -179,4 +173,19 @@ footer {
     padding: 0.35rem 1.25rem;
   }
 
+}
+
+@media screen and (min-width: 992px) {
+
+  #game-area {
+    position: relative;
+  }
+
+
+  .about-button {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 5px;
+  }
 }
