--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ body {
   margin-bottom: 5rem;
 }
 
+.hide-result {
+  display: none;
+}
+
 /* Heading Settings */
 header {
   background-color: rgb(0, 0, 0, 0.5);
@@ -209,6 +213,7 @@ footer {
     font-size: 1.65rem;
     word-spacing: 2rem;
   }
+
 }
 
 @media screen and (min-width: 992px) {
@@ -223,6 +228,10 @@ footer {
     right: 0;
     bottom: 0;
     margin: 5px;
+  }
+
+  .hide-result {
+    display: block;
   }
 }
 
