--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,14 +40,14 @@ h1 {
   color: #FBDF07;
   padding: 1rem;
   text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: .3rem;
+  font-size: 0.75rem;
+  letter-spacing: .1rem;
 }
 
 h2 {
   font-family: 'Indie Flower', cursive;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 0.75em;
 }
 
 h3 {
@@ -184,6 +184,11 @@ footer {
 
   h1 {
     font-size: 1.25rem;
+    letter-spacing: o.3rem;
+  }
+
+  h2 {
+    font-size: 1.25rem;
   }
 
   #game-area {
@@ -208,7 +213,7 @@ footer {
 @media screen and (min-width: 768px) {
 
   h1 {
-    font-size: 1.65rem;
+    font-size: 1.25rem;
     word-spacing: 2rem;
   }
 
@@ -218,6 +223,11 @@ footer {
 
   #game-area {
     position: relative;
+  }
+
+  h1,
+  h2 {
+   font-size: 1.5rem; 
   }
 
 
