--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,16 +167,17 @@ img {
   margin: 0 25% 8px 25%;
   padding: 8px 16px;  
   font-weight: bold; 
+  color: rebeccapurple
 }
 
 .fa-volume-xmark {
-  color: red;
   font-size: 1.5rem;
+  color: red;
 }
 
-.fa-music {
-  color: #fff;
+.fa-music {  
   font-size: 1.5rem;
+  color: green;
 }
 
 /* Instructions */
@@ -197,7 +198,7 @@ footer {
   background-color: black;
 }
 
-.fa-solid {
+.fa-envelope {
   color: #fff;
 }
 
@@ -214,13 +215,8 @@ footer {
 @media screen and (min-width: 576px) {
 
   h1 {
-    font-size: 1.25rem;
-    /* letter-spacing: 0.3rem; */
+    font-size: 1.25rem;   
   }
-
-  /* h2 {
-    font-size: 1.25rem;
-  } */
 
   #game-area {
     width: 60%;
@@ -234,11 +230,7 @@ footer {
   h3 {
     font-size: 1.75rem;
   }
-
-  /* .btn {
-    padding: 0.35rem 1.25rem;
-  } */
-
+ 
 }
 
 @media screen and (min-width: 768px) {
@@ -246,6 +238,10 @@ footer {
   h1 {
     font-size: 1.6rem;
     word-spacing: 2rem;
+  }
+
+  .btn {
+    width: 5.75rem;
   }
 
   /* .hide {
