--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ img {
 }
 
 .btn-press {  
-  background-color: rgb(89, 42, 165);
+  background-color: #ff8000;
 }
 
 /* The Modal*/
@@ -120,7 +120,7 @@ img {
 
 /* loser/winner modal styles */ 
 .winner {
-  background-color: rgb(178, 221, 20);
+  background-color: #00ff40;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
@@ -208,6 +208,7 @@ footer {
 .bottom {
   margin: 0;
   color: black;
+  font-weight: bold;
 }
 
 /* Display Final */
