--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ img {
 
 /* loser/winner modal styles */ 
 .winner {
-  background-color: #00ff40;
+  background-color: green;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
@@ -163,8 +163,7 @@ img {
   border-radius: 15px;
   margin: 0 25% 8px 25%;
   padding: 8px 16px;  
-  font-weight: bold; 
-  color: rebeccapurple
+  font-weight: bold;  
 }
 
 .fa-volume-xmark {
